--- a/src/sass/helpers/_classes.scss
+++ b/src/sass/helpers/_classes.scss
@@ -74,6 +74,14 @@
     font-size: 0.8rem;
     padding: 0.6rem 1rem;
   }
+  &.disabled {
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 0.5;
+      cursor: no-drop;
+    }
+  }
 
   &:hover {
     opacity: 0.8;
