--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,17 @@
 @import './components/cards-container';
 @import './components/card';
 @import './components/shopping-cart-card';
+
+.loading {
+  position: fixed;
+  background-color: rgba(black, 0.8);
+  inset: 0;
+  width: 100%;
+  height: 100vh;
+  color: white;
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+}
