--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -1,4 +1,5 @@
-$clr-primary-hover: #ff8c32;
+$clr-primary-hover: #f65a83;
+$clr-warning: #cc3300;
 $grey-900: #bbbbbb;
 $grey-700: #dddddd;
 $white-900: #ffffff;
