--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/container';
 @import './components/page_container';
 @import './components/navbar';
+@import './components/search';
 @import './components/shopping-cart';
 @import './components/navigation-aside';
 @import './components/heading-container';
