--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -137,6 +137,10 @@
       margin: auto;
     }
   }
+
+  &__content {
+    width: 100%;
+  }
   &__name {
     margin-bottom: 1rem;
   }
@@ -163,6 +167,9 @@
     cursor: pointer;
     transition: all 0.4s ease-in-out;
 
+    @include respond(xs) {
+      right: 0.5rem;
+    }
     &:hover {
       color: rgba(red, 0.7);
     }
