--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   box-shadow: 0 0.25rem 0.5rem -5px rgba($dark-900, 0.2);
   &.hidden {
-    // display: none;
+    display: none;
   }
   &__container {
     display: flex;
@@ -18,6 +18,12 @@
 
     img {
       width: 3rem;
+    }
+
+    > p {
+      @include respond(xs) {
+        display: none;
+      }
     }
   }
 
@@ -64,6 +70,9 @@
     &:hover,
     &.active {
       color: $clr-primary-hover;
+    }
+    &.active::before {
+      background-color: $clr-primary-hover;
     }
 
     &:hover::before {
