--- a/src/sass/components/_shopping-cart.scss
+++ b/src/sass/components/_shopping-cart.scss
@@ -5,13 +5,23 @@
     display: block;
     width: fit-content;
     margin-inline-start: auto;
-    background-color: $clr-primary-hover;
-    color: $dark-900;
     margin-bottom: 2rem;
   }
 
   h3 {
     margin-bottom: 2rem;
     margin-inline-start: 2rem;
+  }
+
+  &__btn-container {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+    gap: 1rem;
+
+    @include respond(xs) {
+      padding: 0;
+      flex-direction: column;
+    }
   }
 }
