--- a/src/sass/helpers/_classes.scss
+++ b/src/sass/helpers/_classes.scss
@@ -62,18 +62,23 @@
 }
 
 .btn {
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 1rem;
   font-weight: 700;
   background-color: $dark-900;
   color: $white-900;
   text-transform: capitalize;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
   &.sm {
     font-size: 0.8rem;
     padding: 0.6rem 1rem;
   }
+
+  &.warning {
+    background-color: $clr-warning;
+  }
+
   &.disabled {
     opacity: 0.5;
 
