--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -2,5 +2,6 @@ $clr-primary-hover: #f65a83;
 $clr-warning: #cc3300;
 $grey-900: #bbbbbb;
 $grey-700: #dddddd;
+$grey-500: #eeeeee;
 $white-900: #ffffff;
 $dark-900: #000000;
