--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -1,47 +1,52 @@
-.search {
-  &.active > div {
-    width: 400px;
-    @include respond(xs) {
-      width: 250px;
-      right: -6rem;
-    }
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
 .search-form {
-  width: 0px;
-  transition: all 0.4s ease-in-out;
-  position: absolute;
-  right: 2.5rem;
-  opacity: 0;
-  z-index: 1500;
-  visibility: hidden;
-
-  @include respond(md) {
-    right: 0rem;
-    bottom: -63px;
-  }
+  width: 40%;
+  position: relative;
 
   @include respond(xs) {
+    order: 3;
+    flex-basis: 100%;
   }
   &__input {
-    display: block;
-    width: 100%;
-    padding: 0.5rem 1.2rem;
-    border: 1px solid rgba($dark-900, 0.5);
-    outline: 1px solid rgba($dark-900, 0.5);
-    transition: all 0.4s ease-in-out;
-    font-size: 1rem;
+    padding: 0.55rem 2rem;
+    padding-inline-start: 1rem;
     border-radius: 0.5rem;
-    &:hover {
-      border: 1px solid rgba($clr-primary-hover, 0.4);
-      outline: 1px solid rgba($clr-primary-hover, 0.4);
-    }
+    border: 1px solid $white-900;
+    font-size: 1rem;
+    width: 100%;
+    transition: all 0.4s ease-in-out;
+
     &:focus {
-      border: 1px solid rgba($clr-primary-hover, 0.8);
-      outline: 1px solid rgba($clr-primary-hover, 0.8);
+      outline: none;
+      box-shadow: 0 0.1rem 0.5rem rgba($clr-primary-hover, 0.5);
+    }
+    &:focus::placeholder {
+      opacity: 0;
+    }
+
+    &::placeholder {
+      transition: all 0.4s ease-in-out;
+    }
+
+    &:hover {
+      border: 1px solid $clr-primary-hover;
+      box-shadow: 0 0.1rem 0.5rem rgba($clr-primary-hover, 0.5);
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 1.3rem;
+    cursor: pointer;
+
+    @include respond(xs) {
+      right: 2rem;
     }
   }
 }
