add receipt for printing

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/cards-container';
 @import './components/card';
 @import './components/shopping-cart-card';
+@import './components/receipt';
 
 .loading {
   position: fixed;
