--- a/src/sass/components/_shopping-cart.scss
+++ b/src/sass/components/_shopping-cart.scss
@@ -5,6 +5,7 @@
     display: block;
     width: fit-content;
     margin-inline-start: auto;
+    margin-inline-end: 2rem;
     margin-bottom: 2rem;
   }
 
