--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 // components
 
 @import './components/container';
+@import './components/loading';
 @import './components/page_container';
 @import './components/navbar';
 @import './components/search';
@@ -17,17 +18,4 @@
 @import './components/card';
 @import './components/shopping-cart-card';
 @import './components/receipt';
-
-.loading {
-  position: fixed;
-  background-color: rgba(black, 0.8);
-  inset: 0;
-  width: 100%;
-  height: 100vh;
-  color: white;
-  z-index: 10000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-}
+@import './components/footer';
