--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -60,9 +60,9 @@
   &__details {
     height: fit-content;
     position: fixed;
-    top: 48%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
     transition: all 0.3s ease-in-out;
     user-select: none;
@@ -83,9 +83,9 @@
 
     &.active {
       opacity: 1;
-      top: 50%;
       user-select: auto;
       z-index: 500;
+      transform: translate(-50%, -50%) scale(1);
     }
   }
 
@@ -98,9 +98,11 @@
     z-index: -1;
     opacity: 0;
     user-select: none;
+    transition: 0.3s;
     &.active {
       opacity: 1;
       z-index: 490;
+      user-select: auto;
     }
   }
 }
