--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -1,5 +1,5 @@
-$clr-primary-hover: #abd9ff;
-$clr-warning: #cc3300;
+$clr-primary-hover: rgba(0, 128, 0, 0.812);
+$clr-warning: #ffd8e4;
 $grey-900: #bbbbbb;
 $grey-700: #dddddd;
 $grey-500: #eeeeee;
