--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -3,7 +3,9 @@
     background-color: $grey-700;
     position: relative;
     overflow: hidden;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    cursor: pointer;
   }
 
   &__img {
@@ -15,16 +17,12 @@
   }
 
   &__add-to-cart {
-    position: absolute;
-    width: 100%;
-    bottom: -100%;
     background: $white-900;
-    padding: 0.5rem 1rem;
+    padding: 1rem 0.5rem 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     transition: all 0.7s 0.1s ease;
-    // bottom: 100%;
   }
 
   &__full-screen {
@@ -51,9 +49,11 @@
   }
 
   &__title {
+    padding: 0 0.5rem;
     h3 {
       margin-bottom: 0.2rem;
       font-size: 1rem;
+      font-weight: 600;
     }
   }
 
