--- a/src/sass/components/_cards-container.scss
+++ b/src/sass/components/_cards-container.scss
@@ -7,3 +7,38 @@
     grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr));
   }
 }
+
+.card__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 1rem;
+
+  @include respond(sm) {
+    flex-direction: column;
+
+    gap: 1rem;
+  }
+}
+
+.card__checkbox {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.card__checkbox-container {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  > label {
+    text-transform: capitalize;
+    user-select: none;
+    cursor: pointer;
+  }
+  > input {
+    width: 15px;
+    height: 15px;
+  }
+}
