--- a/src/sass/helpers/_classes.scss
+++ b/src/sass/helpers/_classes.scss
@@ -62,14 +62,16 @@
 }
 
 .btn {
-  padding: 0.5rem 1rem;
-  font-weight: 700;
+  padding: 0.5rem 1.5rem;
+  font-weight: 400;
   background-color: $dark-900;
   color: $white-900;
   text-transform: capitalize;
-  font-size: 1.1rem;
+  font-size: 0.875rem;
+  letter-spacing: 0.1px;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
+  border-radius: 1rem;
 
   @media print {
     opacity: 0;
@@ -82,6 +84,10 @@
 
   &.warning {
     background-color: $clr-warning;
+    box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15),
+      0px 1px 3px rgba(0, 0, 0, 0.3);
+    border: none;
+    color: $dark-900;
   }
 
   &.disabled {
