--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -1,4 +1,4 @@
-$clr-primary-hover: rgba(0, 128, 0, 0.812);
+$clr-primary-hover: #000000;
 $clr-warning: #ffd8e4;
 $grey-900: #bbbbbb;
 $grey-700: #dddddd;
